<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:clickable="true"
    android:focusableInTouchMode="true"
    tools:context=".moto.transaction.MotoTransactionActivity"
    android:focusable="true">

    <include layout="@layout/view_header" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="20dp"
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:focusable="true">

            <com.smartpay.application.util.MoveDisableEditText
                android:id="@+id/et_transaction"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@null"
                android:gravity="center"
                android:hint="@string/no_money"
                android:inputType="numberDecimal"
                android:lines="1"
                android:maxLength="15"
                android:longClickable="false"
                android:nextFocusDown="@id/et_pan"
                android:theme="@style/editTextStyle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_pan_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_card_pan"
                    android:theme="@style/hintTextStyle" />

                <com.smartpay.application.util.MoveDisableEditText
                    android:id="@+id/et_pan"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/white"
                    android:gravity="center"
                    android:letterSpacing="0.1"
                    android:lines="1"
                    android:maxLength="23"
                    android:inputType="number"
                    android:theme="@style/editTextStyle"
                    android:longClickable="false"
                    android:nextFocusDown="@id/et_expire_date"
                    android:hint="@string/card_pan_hint"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_expire_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/expire_date"
                        android:theme="@style/hintTextStyle" />

                    <com.smartpay.application.util.MoveDisableEditText
                        android:id="@+id/et_expire_date"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/white"
                        android:gravity="center"
                        android:lines="1"
                        android:longClickable="false"
                        android:maxLength="5"
                        android:inputType="number"
                        android:nextFocusDown="@id/et_cvv"
                        android:theme="@style/editTextStyle"
                        android:hint="@string/expire_date_hint"
                        tools:ignore="TextFields" />
                </LinearLayout>

                <View
                    android:layout_width="20dp"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_cvv_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cvv"
                        android:theme="@style/hintTextStyle" />

                    <com.smartpay.application.util.MoveDisableEditText
                        android:id="@+id/et_cvv"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/white"
                        android:gravity="center"
                        android:lines="1"
                        android:longClickable="false"
                        android:maxLength="4"
                        android:inputType="number"
                        android:theme="@style/editTextStyle"
                        android:hint="@string/cvv_hint"
                        android:imeOptions="actionDone"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_select_type_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_moto"
                    android:theme="@style/hintTextStyle" />

                <RelativeLayout
                    android:id="@+id/rl_select_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/white_stroke_4_corner"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/tv_select_type1"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/single_moto_bg"
                        android:text="@string/single_moto"
                        android:theme="@style/displayTextStyle" />

                    <TextView
                        android:id="@+id/tv_select_type2"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_below="@id/tv_select_type1"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/black_bg_4_corner"
                        android:text="@string/recurring_moto"
                        android:theme="@style/displayTextStyle"
                        android:textColor="@color/colorBlack"
                        android:visibility="gone"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="20dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="20dp"
                        android:src="@mipmap/select"
                        android:contentDescription="@string/select_moto"/>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_stored_credential"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_stored_credentials_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stored_credentials"
                    android:theme="@style/hintTextStyle"
                    android:textColor="@color/colorRecurringMoto"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:id="@+id/tv_stored_on_file_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:textStyle="bold"
                        android:text="@string/is_stored_on_file"

                        android:theme="@style/hintTextStyle"
                        android:textColor="@color/colorRecurringMoto"/>

                    <LinearLayout
                        android:id="@+id/ll_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:gravity="center_vertical"
                        android:layout_marginStart="20dp"
                        android:paddingHorizontal="10dp"
                        android:background="@drawable/white_bg_stoke_15_corner">

                        <ImageView
                            android:id="@+id/iv_yes"
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="8dp"
                            android:src="@mipmap/yes"
                            android:contentDescription="@string/yes" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:text="@string/yes"
                            android:textColor="@color/colorBlack"
                            android:theme="@style/hintTextStyle" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_no"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:gravity="center_vertical"
                        android:layout_marginStart="20dp"
                        android:paddingHorizontal="10dp"
                        android:background="@drawable/white_bg_15_corner">

                        <ImageView
                            android:id="@+id/iv_no"
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="8dp"
                            android:src="@mipmap/yes"
                            android:visibility="gone"
                            android:contentDescription="@string/yes"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:text="@string/no"
                            android:textColor="@color/colorBlack"
                            android:theme="@style/hintTextStyle" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tv_continue"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/gradient_bg_yellow_green"
        android:text="@string/confirm"
        android:theme="@style/displayTextStyle"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:focusable="true"/>
</LinearLayout>